#12 add class UC

--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -30,6 +30,7 @@
 <li><a href="https://www.unlbio.ml/classes/IRs">IRs</a></li>
 <li><a href="https://www.unlbio.ml/classes/SRs">SRs</a></li>
 <li><a href="https://www.unlbio.ml/classes/TRs">TRs</a></li>
+<li><a href="https://www.unlbio.ml/classes/UCs">UCs</a></li>
 </ul>
 </li>
 </ul>
