--- a/templates/index.html
+++ b/templates/index.html
@@ -36,6 +36,9 @@
             <li><a href="{{ url_for('classes', class_id = 'TRs') }}">TRs</a> <span
                     class="divider"></span>
             </li>
+            <li><a href="{{ url_for('classes', class_id = 'UCs') }}">UCs</a> <span
+                    class="divider"></span>
+            </li>
         </ul>
     </div>
     <div class="row">
