--- a/templates/trembl.html
+++ b/templates/trembl.html
@@ -14,9 +14,9 @@
     <!--    </h1>-->
     <!--    <ul class="breadcrumb" style="font-size: medium">-->
     <!--        {% for i in range(40) %}-->
-        <!--            <li><a href="{{ url_for('trembl', family_id = i + 1) }}">{{ i + 1 }}</a> <span class="divider"></span>-->
-        <!--            </li>-->
-        <!--        {% endfor %}-->
+    <!--            <li><a href="{{ url_for('trembl', family_id = i + 1) }}">{{ i + 1 }}</a> <span class="divider"></span>-->
+    <!--            </li>-->
+    <!--        {% endfor %}-->
 
     <!--    </ul>-->
     <!--</div>-->
@@ -32,77 +32,77 @@
 
 
     <script defer type="text/javascript">
-        $(document).ready(function () {
-            $('#data-table').DataTable({
-                lengthMenu: [[10, 25, 50, -1], ['10 rows', '25 rows', '50 rows', 'Show all']],
-                dom: 'Bfrtip',
-                columnDefs: [{
-                    targets: 7,
-                    searchable: true,
-                    visible: false
-                }],
-                buttons: [
-                    {
-                        extend: 'csvHtml5',
-                        fieldBoundary: '',
-                        text: 'export',
-                        exportOptions: {
-                            columns: [-1]
-                        }
-                    },
-                    {
-                        extend: 'copy',
-                        fieldBoundary: '',
-                        text: 'copy',
-                        exportOptions: {
-                            columns: [-2]
-                        }
-                    },
-                    {
-                        text: 'All',
-                        action: function () {
-                            location.reload(true);
-                        }
-                    },
-                    {
-                        text: 'Bacteria',
-                        action: function () {
-                            var table = $('#data-table').DataTable();
-                            table.column(7).search('Bacteria').draw();
-                        }
-                    },
-                    {
-                        text: 'Archaea',
-                        action: function () {
-                            var table = $('#data-table').DataTable();
-                            table.column(7).search('Archaea').draw();
-                        }
-                    },
-                    {
-                        text: 'Eukaryota',
-                        action: function () {
-                            var table = $('#data-table').DataTable();
-                            table.column(7).search('Eukaryota').draw();
-                        }
-                    },
-                    {
-                        text: 'Viruses',
-                        action: function () {
-                            var table = $('#data-table').DataTable();
-                            table.column(7).search('Viruses').draw();
-                        }
-                    },
-                    {
-                        text: 'Unclassified',
-                        action: function () {
-                            var table = $('#data-table').DataTable();
-                            table.column(7).search('unclassified').draw();
-                        }
-                    }, 'pageLength'
-                ],
-                select: true
-            });
-        });
+    $(document).ready(function () {
+    $('#data-table').DataTable({
+        lengthMenu: [[ 10, 25, 50, -1 ],[ '10 rows', '25 rows', '50 rows', 'Show all' ]],
+        dom: 'Bfrtip',
+        columnDefs: [{
+        targets: 7,
+        searchable: true,
+        visible: false
+        }],
+        buttons: [
+            {
+                extend: 'csvHtml5',
+                fieldBoundary: '',
+                text: 'export',
+                exportOptions: {
+                    columns: [-1]
+                }
+            },
+            {
+                extend: 'copy',
+                fieldBoundary: '',
+                text: 'copy',
+                exportOptions: {
+                    columns: [-2]
+                }
+            },
+            {
+                text: 'All',
+                action: function () {
+                    location.reload(true);
+                }
+            },
+            {
+                text: 'Bacteria',
+                action: function () {
+                    var table = $('#data-table').DataTable();
+                    table.column(7).search('Bacteria').draw();
+                }
+            },
+            {
+                text: 'Archaea',
+                action: function () {
+                    var table = $('#data-table').DataTable();
+                    table.column(7).search('Archaea').draw();
+                }
+            },
+            {
+                text: 'Eukaryota',
+                action: function () {
+                    var table = $('#data-table').DataTable();
+                    table.column(7).search('Eukaryota').draw();
+                }
+            },
+            {
+                text: 'Viruses',
+                action: function () {
+                    var table = $('#data-table').DataTable();
+                    table.column(7).search('Viruses').draw();
+                }
+            },
+            {
+                text: 'Unclassified',
+                action: function () {
+                    var table = $('#data-table').DataTable();
+                    table.column(7).search('unclassified').draw();
+                }
+            },'pageLength'
+        ],
+        select: true
+    });
+});
     </script>
     <table class="table" id="data-table">
         <thead>
@@ -121,19 +121,13 @@
         {% for record in records %}
             <tr>
                 <td>{{ record.protein_enzyme }}</td>
-                <td>
-                    <a href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?id={{ record.web_id }}">{{ record.strain }}</a>
-                </td>
+                <td><a href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?id={{ record.web_id }}">{{ record.strain }}</a></td>
                 <td><a href="https://www.uniprot.org/uniprot/{{ record.uniq_id }}">{{ record.uniq_id }}</a></td>
                 <td>{{ record.family }}</td>
                 {% if record.ec == '-1' %}
                     <td>{{ ' ' }}</td>
                 {% else %}
-                    <td>
-                        {% for element in ec[record.number] %}
-                            <a href="https://www.brenda-enzymes.org/enzyme.php?ecno={{ element }}">{{ element }}</a>
-                        {% endfor %}
-                    </td>
+                    <td><a href="https://www.brenda-enzymes.org/enzyme.php?ecno={{ record.ec }}">{{ record.ec }}</a></td>
                 {% endif %}
                 <td>
                     <a href={{ url_for('detail', unid = record.uniq_id) }}>view</a>
