--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -49,7 +49,7 @@ $(function () {
 })
 
 // Initialize popover component
-$(function () {
-  $('[data-toggle="popover"]').popover()
-})
+$(function () { 
+    	$("[data-toggle='popover']").popover({trigger:'hover click'});
+    });
 </script>
