--- a/templates/trembl.html
+++ b/templates/trembl.html
@@ -24,6 +24,7 @@
     $('#data-table').DataTable({
         lengthMenu: [[ 10, 25, 50, -1 ],[ '10 rows', '25 rows', '50 rows', 'Show all' ]],
         dom: 'Bfrtip',
+        "scrollX": true,
         columnDefs: [{
         targets: 7,
         searchable: true,
