--- a/templates/swissport.html
+++ b/templates/swissport.html
@@ -27,6 +27,10 @@
                     targets: 7,
                     searchable: true,
                     visible: false
+                },{
+                    targets: 7,
+                    searchable: true,
+                    visible: false
                 }],
                 buttons: [
                     {
@@ -87,14 +91,14 @@
     <table class="table" id="data-table">
         <thead>
         <tr>
-            <th>Protein Name</th>
-            <th>Strain</th>
-            <th>Uniprot</th>
-            <th>Family</th>
-            <th>EC</th>
-            <th>Sequence</th>
-            <th hidden></th>
-            <th>type</th>
+            <th style="white-space: nowrap">Protein Name</th>
+            <th style="white-space: nowrap">Strain</th>
+            <th style="white-space: nowrap">Uniprot</th>
+            <th style="white-space: nowrap">Family</th>
+            <th style="white-space: nowrap">EC</th>
+            <th style="white-space: nowrap">Sequence</th>
+            <th style="white-space: nowrap">hide</th>
+            <th style="white-space: nowrap">type</th>
         </tr>
         </thead>
         <tbody>
@@ -116,7 +120,7 @@
                     </td>
                 {% endif %}
                 <td>
-                    <a href={{ url_for('detail', unid = record.uniq_id) }}>view</a>
+                    <a href={{ url_for('detail', unid = record.uniq_id)}}>view</a>
                 </td>
                 <td>
                     <p hidden>>{{ record.uniq_id }} {{ record.protein_enzyme }} OS={{ record.strain }}</p>
