Bug fix on hiding tables

--- a/templates/swissport.html
+++ b/templates/swissport.html
@@ -24,11 +24,7 @@
                 dom: 'Bfrtip',
                 "scrollX": true,
                 columnDefs: [{
-                    targets: 7,
-                    searchable: true,
-                    visible: false
-                },{
-                    targets: 7,
+                    targets: [6,7],
                     searchable: true,
                     visible: false
                 }],
