--- a/templates/trembl.html
+++ b/templates/trembl.html
@@ -26,11 +26,7 @@
         dom: 'Bfrtip',
         "scrollX": true,
         columnDefs: [{
-        targets: 7,
-        searchable: true,
-        visible: false
-        },{
-        targets: 6,
+        targets: [6,7],
         searchable: true,
         visible: false
         }],
