--- a/templates/swissport.html
+++ b/templates/swissport.html
@@ -11,7 +11,7 @@
     <div class="abstractOfPage">
         <div class="informationOfGene">
             <h1>
-                Characterize
+                Swiss-Prot
             </h1>
             <p>1 C-ring cleavage quercetin Bacillus subtilis (strain 168) a tryptophan auxotroph isolated after X-rays
                 mutagenesis of B. subtilis>
