Change back to css container-wrap instead of scrollX from datatable

--- a/templates/_head.html
+++ b/templates/_head.html
@@ -51,4 +51,23 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
 <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+    <style type="text/css">
+        .container-fluid {
+            margin-left: 1em;
+            margin-right: 1em;
+        }
+	.container-wrap {
+	    overflow: hidden;
+	    overflow-x: scroll; /* 1 */
+	    -webkit-backface-visibility: hidden;
+	    -webkit-perspective: 1000;
+	    -webkit-overflow-scrolling: touch; /* 2 */
+	    text-align: justify; /* 3 */
+	    &::-webkit-scrollbar {
+	        display: none;
+	    }
+	}
+    </style>
+
 </head>
