--- a/templates/trembl.html
+++ b/templates/trembl.html
@@ -18,13 +18,12 @@
         </div>
     </div>
 
-
+<div class="container-wrap">
     <script defer type="text/javascript">
     $(document).ready(function () {
     $('#data-table').DataTable({
         lengthMenu: [[ 10, 25, 50, -1 ],[ '10 rows', '25 rows', '50 rows', 'Show all' ]],
         dom: 'Bfrtip',
-        "scrollX": true,
         columnDefs: [{
         targets: [6,7],
         searchable: true,
@@ -141,5 +140,5 @@
         </tbody>
 
     </table>
-
+</div>
 {% endblock %}
