--- a/templates/swissport.html
+++ b/templates/swissport.html
@@ -22,7 +22,6 @@
             $('#data-table').DataTable({
                 lengthMenu: [[10, 25, 50, -1], ['10 rows', '25 rows', '50 rows', 'Show all']],
                 dom: 'Bfrtip',
-                "scrollX": true,
                 columnDefs: [{
                     targets: [6,7],
                     searchable: true,
@@ -84,6 +83,7 @@
             });
         });
     </script>
+<div class="container-wrap">
     <table class="table" id="data-table">
         <thead>
         <tr>
@@ -131,5 +131,5 @@
         </tbody>
 
     </table>
-
+</div>
 {% endblock %}
