Small change on database structor and new data

--- a/templates/characteristic.html
+++ b/templates/characteristic.html
@@ -54,7 +54,7 @@
             <th style="white-space: nowrap">Product</th>
             <th style="white-space: nowrap">PDB</th>
             <th style="white-space: nowrap">Km(μM)</th>
-            <th style="white-space: nowrap">Vmax(uM/s)</th>
+            <th style="white-space: nowrap">Vmax(μM/s)</th>
             <th style="white-space: nowrap">Kcat(s<sup>-1</sup>)</th>
             <th style="white-space: nowrap">Family</th>
             <th style="white-space: nowrap">Sequence</th>
@@ -103,7 +103,11 @@
                 {% if record.km == '-1' %}
                     <td>{{ ' ' }}</td>
                 {% else %}
+                    {% if record.number == '39' %}
+                    <td>4±0.9[Mn<sup>2+</sup>]</td>
+                    {% else %}
                     <td>{{ record.km }}</td>
+                    {% endif %}
                 {% endif %}
                 {% if record.vmax == '-1' %}
                     <td>{{ ' ' }}</td>
@@ -113,7 +117,11 @@
                 {% if record.kcat == '-1' %}
                     <td>{{ ' ' }}</td>
                 {% else %}
-                    <td>{{ record.kcat }}</td>
+                    {% if record.number == '39' %}
+                    <td>25±1[Mn<sup>2+</sup>]</td>
+                    {% else %}
+                    <td>{{ record.km }}</td>
+                    {% endif %}
                 {% endif %}
                 <td>
                     <a href="{{ url_for('family', family_id = record.family) }}">{{ record.family }}</a>
