--- a/templates/characteristic.html
+++ b/templates/characteristic.html
@@ -79,18 +79,18 @@
                 {% else %}
                     <td>
                         {% for element in ec[record.number] %}
-                            <a href="https://www.brenda-enzymes.org/enzyme.php?ecno={{ element }}">{{ element }}</a>
+                            <a href="https://www.brenda-enzymes.org/enzyme.php?ecno={{ element }}">{{ element }};</a>
                         {% endfor %}
                     </td>
 
                 {% endif %}
                 <td>
                     {% for element in sub[record.number] %}
-                        <a href= {{ element[1] }}>{{ element[0] }}</a>
+                        <a href= {{ element[1] }}>{{ element[0] }};</a>
                     {% endfor %}
                 </td>
                 <td> {% for element in product[record.number] %}
-                        <a href= {{ element[1] }}>{{ element[0] }}</a>
+                        <a href= {{ element[1] }}>{{ element[0] }};</a>
                     {% endfor %}
                 </td>
                 {% if record.pdb  == '-1' %}
@@ -98,7 +98,7 @@
                 {% else %}
                     <td>
                         {% for element in rows[record.number] %}
-                            <a href="https://www.rcsb.org/structure/{{ element[1] }}">{{ element[0] }}</a>
+                            <a href="https://www.rcsb.org/structure/{{ element[1] }}">{{ element[0] }};</a>
                         {% endfor %}
                     </td>
                 {% endif %}
