--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,9 @@
 
 {% block content %}
     <!-- Main Content Area-->
+    {% for element in sub %}
+        <a href= {{ element[2] }}>{{ element[0] }}</a>{{ element[1] }};
+    {% endfor %}
 
     <div class="row">
         <div class="page-header">
