--- a/templates/characteristic.html
+++ b/templates/characteristic.html
@@ -91,7 +91,7 @@
                         {% endfor %}
                     </td>
                     <td> {% for element in product[record.number] %}
-                        {% if ('A1' in element[0] or 'A2' in element[0]  or 'A3' in element[0] %}
+                        {% if ('A1' in element[0] or 'A2' in element[0]  or 'A3' in element[0]) %}
                             {{ element[0] }}
                         {% else %}
                             <a href= {{ element[1] }}>{{ element[0] }};</a>
