--- a/templates/classes.html
+++ b/templates/classes.html
@@ -19,15 +19,7 @@
 
     {% if class_id != 'all' %}
         <div class="familyInformation">
-            <h1>Class Information</h1>
-            <p style="font-size: medium">Family (Latin: familia, plural familiae) is one of the eight major hierarchical
-                taxonomic ranks in Linnaean taxonomy; it is classified between order and genus. A family may be divided
-                into
-                subfamilies, which are intermediate ranks between the ranks of family and genus. The official family
-                names
-                are Latin in origin; however, popular names are often used: for example, walnut trees and hickory trees
-                belong to the family Juglandaceae, but that family is commonly referred to as being the "walnut
-                family".</p>
+            {{ content|markdown|safe }}
         </div>
         <div class="Family">
             <h1>Family</h1>
